<resources>
    <string name="app_name">Dog Meets</string>
    <string name="btnSingIn">Войти</string>
    <string name="btnRegister">Зарегистрироваться</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="finish_registration">Завершить регистрацию</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>