<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/ic_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="75dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="120dp"
            android:fontFamily="@font/kanit_extrabold"
            android:text="@string/app_name"
            android:textColor="@color/accent"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:autofillHints="@strings/email"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/primary_dark"
            android:textColorHint="@color/primary" />


        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:autofillHints="@strings/password"
            android:background="@drawable/edit_text"
            android:ems="10"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColor="@color/primary_dark"
            android:textColorHint="@color/primary" />


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/ubuntu"
            android:text="@string/btnSingIn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/ubuntu"
            android:text="@string/btnRegister"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>